tests/toy/neg/000992_mutation.toylang
program a = { if a then sleep bool else sleep; } .
